updated exam 3 date on calendar.

--- a/tools/calendar-generator.ipynb
+++ b/tools/calendar-generator.ipynb
@@ -129,7 +129,7 @@
     "exams = {\n",
     "    '2020-02-12': 'Exam 1 at 7pm',\n",
     "    '2020-03-11': 'Exam 2 at 7pm',\n",
-    "    '2020-04-08': 'Exam 3 at 7pm',\n",
+    "    '2020-04-15': 'Exam 3 at 7pm',\n",
     "}"
    ]
   },
@@ -206,7 +206,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 6 categories to check\n",
